force-app/main/default/objects/Contact/fields/Marketing_Flag__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Flag</label>
    <type>Checkbox</type>
</CustomField>