force-app/main/default/objects/Contact/fields/MarketingConsentDate__c.field-meta.xml
<CustomField>
    <fullName>MarketingConsentDate__c</fullName>
    <label>MarketingConsentDate</label>
    <type>Date</type>
</CustomField>