force-app/main/default/objects/Contact/fields/Privacy_Flag__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privacy Flag</label>
    <type>Checkbox</type>
</CustomField>