force-app/main/default/objects/Contact/fields/TermsConditions_Flag__c.field-meta.xml
<CustomField>
    <fullName>TermsConditions_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms and conditions Flag</label>
    <type>Checkbox</type>
</CustomField>